syntax = "proto3";

package j5.bcl.v1;

option go_package = "github.com/pentops/j5/gen/j5/bcl/v1/bcl_j5pb";

message SourceLocation {
  map<string, SourceLocation> children = 1;
  int32 start_line = 2;
  int32 start_column = 3;
  int32 end_line = 4;
  int32 end_column = 5;
}

/*
   extend google.protobuf.MessageOptions {
     MessageOptions bcl = 555401;
   }

   // Split Ref
   // Name Tag
   // Type Select Tag
   // Qualifier
   // Alias Blocks and Attributes
   // Description

   message MessageOptions {
     string name_field = 1;
     string type_select_field = 2;
     string qualifier_field = 3;
     string description_field = 4;
   }*/
